Fixed cut off for experience

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 .about {
-    padding: 15vh;
+    padding: 1vh;
 }
 
 .summary {
@@ -28,6 +28,7 @@
 
 .contact{
     text-align: center;
+    word-wrap: break-word;
 }
 
 section{
@@ -42,4 +43,10 @@ section{
     max-width: 10vw;
     height: auto;
     border: 3px solid var(--grey--);
+}
+
+@media screen and (max-width: 900px) {
+    .experience {
+        flex-direction: column;
+    }
 }
